--- a/tasks/heimdall.yml
+++ b/tasks/heimdall.yml
@@ -28,6 +28,9 @@
   docker_container:
     name: heimdall
     image: "{{ heimdall_docker_image }}"
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ heimdall_data_directory }}:/config:rw"
@@ -41,7 +44,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "heimdall"
-      traefik.frontend.rule: "Host:heimdall.{{ ansible_nas_domain }}"
       traefik.enable: "{{ heimdall_available_externally }}"
-      traefik.port: "80"
+      traefik.http.services.heimdall-svc.loadbalancer.server.port: "80"
+      traefik.http.routers.heimdall.rule: "Host(`heimdall.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.heimdall.tls: "true"
