--- a/tasks/jellyfin.yml
+++ b/tasks/jellyfin.yml
@@ -17,6 +17,7 @@
     ports:
       - "{{ jellyfin_port_http }}:8096"
       - "{{ jellyfin_port_https }}:8920"
+    network_mode: host
     env:
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ jellyfin_user_id }}"
@@ -24,7 +25,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "jellyfin"
-      traefik.frontend.rule: "Host:jellyfin.{{ ansible_nas_domain }}"
       traefik.enable: "{{ jellyfin_available_externally }}"
-      traefik.port: "8096"
+      traefik.http.services.jellyfin-svc.loadbalancer.server.port: "8096"
+      traefik.http.routers.jellyfin.rule: "Host(`jellyfin.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.jellyfin.tls: "true"
