--- a/tasks/joomla.yml
+++ b/tasks/joomla.yml
@@ -4,42 +4,49 @@
     path: "{{ item }}"
     state: directory
   with_items:
-    - "{{ joomla_data_directory }}"
-    - "{{ joomla_data_directory }}/db"
+    - "{{ joomla_data_directory }}/www"
+    - "{{ joomla_data_directory }}/creds"
 
-- name: MySQL Docker Container for Joomla
-  docker_container:
-    name: joomla_mysql
-    image: mysql:5.7
-    pull: true
-    volumes:
-      - "{{ joomla_data_directory }}/db:/var/lib/mysql"
-    env:
-      MYSQL_DATABASE: "joomla"
-      MYSQL_USER: "joomla"
-      MYSQL_ROOT_PASSWORD: "{{ joomla_database_password }}"
-    restart_policy: unless-stopped
-    memory: 1g
+- name: Create Joomla user on Postgres
+  postgresql_user:
+    name: joomla
+    password: "{{ lookup('password', joomla_data_directory + '/creds/joomla_postgres_passwd length=32') }}"
+    login_user: "{{ postgres_user }}"
+    login_password: "{{ postgres_password }}"
+    state: present
+    login_host: 127.0.0.1
+
+- name: Create Joomla database on Postgres
+  postgresql_db:
+    name: joomla
+    owner: joomla
+    login_user: "{{ postgres_user }}"
+    login_password: "{{ postgres_password }}"
+    state: present
+    login_host: 127.0.0.1
 
 - name: Joomla Docker Container
   docker_container:
     name: joomla
     image: joomla
+    purge_networks: true
+    networks:
+      - name: web
+      - name: postgres
     pull: true
     volumes:
-      - "{{ joomla_data_directory }}:/var/www/html:rw"
+      - "{{ joomla_data_directory }}/www:/var/www/html:rw"
     ports:
       - "{{ joomla_port }}:80"
-    links:
-      - "joomla_mysql:mysql"
     env:
-      JOOMLA_DB_HOST: "mysql"
-      JOOMLA_DB_USER: "root"
-      JOOMLA_DB_PASSWORD: "{{ joomla_database_password }}"
+      JOOMLA_DB_HOST: "postgres"
+      JOOMLA_DB_USER: "joomla"
+      JOOMLA_DB_NAME: "joomla"
+      JOOMLA_DB_PASSWORD: "{{ lookup('password', joomla_data_directory + '/creds/joomla_postgres_passwd length=32') }}"
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "joomla"
-      traefik.frontend.rule: "Host: joomla.{{ ansible_nas_domain }}"
       traefik.enable: "{{ joomla_available_externally }}"
-      traefik.port: "80"
+      traefik.http.services.joomla-svc.loadbalancer.server.port: "80"
+      traefik.http.routers.joomla.rule: "Host(`joomla.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.joomla.tls: "true"
