--- a/tasks/nextcloud.yml
+++ b/tasks/nextcloud.yml
@@ -34,6 +34,7 @@
   docker_container:
     name: redis-nextcloud
     image: redis
+    purge_networks: true
     networks:
       - name: nextcloud
     restart_policy: unless-stopped
@@ -47,6 +48,7 @@
       - "{{ nextcloud_data_directory }}/nextcloud:/var/www/html:rw"
     ports:
       - "{{ nextcloud_port }}:80"
+    purge_networks: true
     networks:
       - name: ldap
       - name: postgres
@@ -74,7 +76,6 @@
     labels:
       traefik.enable: "{{ nextcloud_available_externally }}"
       traefik.http.services.nextcloud-svc.loadbalancer.server.port: "80"
-      traefik.http.routers.nextcloud.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
       traefik.http.routers.nextcloud.rule: "Host(`nextcloud.{{ ansible_nas_domain }}`)"
       traefik.http.routers.nextcloud.tls: "true"
     restart_policy: unless-stopped
@@ -171,6 +172,7 @@
     entrypoint: /cron.sh
     volumes:
       - "{{ nextcloud_data_directory }}/nextcloud:/var/www/html:rw"
+    purge_networks: true
     networks:
       - name: ldap
       - name: postgres
