--- a/tasks/thelounge.yml
+++ b/tasks/thelounge.yml
@@ -17,6 +17,9 @@
   docker_container:
     name: thelounge
     image: thelounge/thelounge:latest
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     ports:
       - "{{ thelounge_port_one }}:9001"
@@ -27,8 +30,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "thelounge"
-      traefik.frontend.rule: "Host:thelounge.{{ ansible_nas_domain }}"
       traefik.enable: "{{ thelounge_available_externally }}"
-      traefik.port: "9000"
-
+      traefik.http.services.thelounge-svc.loadbalancer.server.port: "9000"
+      traefik.http.routers.thelounge.rule: "Host(`thelounge.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.thelounge.tls: "true"
