--- a/tasks/bitwarden.yml
+++ b/tasks/bitwarden.yml
@@ -8,7 +8,10 @@
 - name: Bitwarden Docker Container
   docker_container:
     name: bitwarden
-    image: mprasil/bitwarden:latest
+    image: bitwardenrs/server:latest
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     ports:
       - "{{ bitwarden_port_a }}:80"
@@ -21,12 +24,10 @@
       LOG_FILE: "/data/bitwarden.log"
       WEBSOCKET_ENABLED: "true"
     labels:
-      traefik.web.frontend.rule: "Host:bitwarden.{{ ansible_nas_domain }}"
       traefik.enable: "{{ bitwarden_available_externally }}"
-      traefik.web.port: "80"
-      traefik.hub.frontend.rule: "Host:bitwarden.{{ ansible_nas_domain }};Path:/notifications/hub"
-      traefik.hub.port: "bitwarden_port_b"
-      traefik.hub.protocol: "ws"
+      traefik.http.services.bitwarden-svc.loadbalancer.server.port: "80"
+      traefik.http.routers.bitwarden.rule: "Host(`bitwarden.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.bitwarden.tls: "true"
     restart_policy: unless-stopped
     #memory: 1g
 
