--- a/tasks/calibre.yml
+++ b/tasks/calibre.yml
@@ -9,6 +9,9 @@
   docker_container:
     name: calibre
     image: linuxserver/calibre-web:latest
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ calibre_data_directory }}/config:/config"
@@ -22,8 +25,8 @@
       - "{{ calibre_port }}:8083"
     restart_policy: unless-stopped
     labels:
-      traefik.backend: "calibre"
-      traefik.frontend.rule: "Host:calibre.{{ ansible_nas_domain }}"
       traefik.enable: "{{ calibre_available_externally }}"
-      traefik.port: "8083"
+      traefik.http.services.calibre-svc.loadbalancer.server.port: "8083"
+      traefik.http.routers.calibre.rule: "Host(`calibre.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.calibre.tls: "true"
     memory: 1g
