--- a/tasks/cloudcmd.yml
+++ b/tasks/cloudcmd.yml
@@ -10,6 +10,9 @@
   docker_container:
     name: cloudcmd
     image: coderaiser/cloudcmd
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ cloudcmd_data_directory }}:/config:rw"
@@ -23,7 +26,8 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "cloudcmd"
-      traefik.frontend.rule: "Host:cloudcmd.{{ ansible_nas_domain }}"
       traefik.enable: "{{ cloudcmd_available_externally }}"
-      traefik.port: "8000"
+      traefik.http.services.cloudcmd-svc.loadbalancer.server.port: "8000"
+      traefik.http.routers.cloudcmd.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
+      traefik.http.routers.cloudcmd.rule: "Host(`cloudcmd.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.cloudcmd.tls: "true"
