--- a/tasks/duplicati.yml
+++ b/tasks/duplicati.yml
@@ -10,6 +10,9 @@
   docker_container:
     name: duplicati
     image: linuxserver/duplicati
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     ports:
       - "{{ duplicati_port }}:8200"
@@ -21,7 +24,8 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "duplicati"
-      traefik.frontend.rule: "Host:duplicati.{{ ansible_nas_domain }}"
       traefik.enable: "{{ duplicati_available_externally }}"
-      traefik.port: "8200"
+      traefik.http.services.duplicati-svc.loadbalancer.server.port: "8200"
+      traefik.http.routers.duplicati.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
+      traefik.http.routers.duplicati.rule: "Host(`duplicati.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.duplicati.tls: "true"
