--- a/tasks/gitlab.yml
+++ b/tasks/gitlab.yml
@@ -31,6 +31,9 @@
   docker_container:
     name: gitlab
     image: gitlab/gitlab-ce:latest
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ gitlab_data_directory }}/config:/etc/gitlab:rw"
@@ -44,7 +47,7 @@
     restart_policy: unless-stopped
     memory: 4g
     labels:
-      traefik.backend: "gitlab"
-      traefik.frontend.rule: "Host:gitlab.{{ ansible_nas_domain }}"
       traefik.enable: "{{ gitlab_available_externally }}"
-      traefik.port: "80"
+      traefik.http.services.gitlab-svc.loadbalancer.server.port: "80"
+      traefik.http.routers.gitlab.rule: "Host(`gitlab.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.gitlab.tls: "true"
