--- a/tasks/glances.yml
+++ b/tasks/glances.yml
@@ -17,7 +17,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "glances"
-      traefik.frontend.rule: "Host:glances.{{ ansible_nas_domain }}"
       traefik.enable: "{{ glances_available_externally }}"
-      traefik.port: "61208"
+      traefik.http.services.glances-svc.loadbalancer.server.port: "61208"
+      traefik.http.routers.glances.rule: "Host(`glances.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.glances.tls: "true"
