--- a/tasks/guacamole.yml
+++ b/tasks/guacamole.yml
@@ -6,32 +6,15 @@
   with_items:
     - "{{ guacamole_data_directory }}/config"
 
-- name: Remove Old Guacamole Mysql Docker Container
-  docker_container:
-    name: guacamole-mysql
-    state: absent
-    keep_volumes: true
-
-- name: Remove Old Guacamole guacd Docker Container
-  docker_container:
-    name: guacamole-guacd
-    state: absent
-    keep_volumes: true
-
-- name: Remove old Guacamole directories
-  file:
-    path: "{{ item }}"
-    state: absent
-  with_items:
-    - "{{ guacamole_data_directory }}/mysql"
-
 # docker run -v /home/david/.guac:/config:rw  -p 8080:8080   oznu/guacamole
-
 
 - name: Guacamole Container
   docker_container:
     name: guacamole
     image: "oznu/guacamole"
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ guacamole_data_directory }}/config:/config:rw"
@@ -39,14 +22,9 @@
       - "{{ guacamole_port }}:8080"
     restart_policy: unless-stopped
     memory: 1g
-    labels:
-      traefik.backend: "guacamole"
-      traefik.frontend.rule: "Host:guacamole.{{ ansible_nas_domain }}"
-      traefik.enable: "{{ guacamole_available_externally }}"
-      traefik.port: "8080"
-
-- name: Restart Guacamole Container
-  docker_container:
-    name: guacamole
-    image: "oznu/guacamole"
     restart: true
+    labels:
+      traefik.enable: "{{ guacamole_available_externally }}"
+      traefik.http.services.guacamole-svc.loadbalancer.server.port: "8080"
+      traefik.http.routers.guacamole.rule: "Host(`guacamole.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.guacamole.tls: "true"
