--- a/tasks/homebridge.yml
+++ b/tasks/homebridge.yml
@@ -23,7 +23,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "homebridge"
-      traefik.frontend.rule: "Host:homebridge.{{ ansible_nas_domain }}"
       traefik.enable: "{{ homebridge_available_externally }}"
-      traefik.port: "8087"
+      traefik.http.services.homebridge-svc.loadbalancer.server.port: "8087"
+      traefik.http.routers.homebridge.rule: "Host(`homebridge.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.homebridge.tls: "true"
