--- a/tasks/lidarr.yml
+++ b/tasks/lidarr.yml
@@ -8,6 +8,9 @@
   docker_container:
     name: lidarr
     image: linuxserver/lidarr
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ lidarr_music_directory }}:/music:rw"
@@ -22,7 +25,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "lidarr"
-      traefik.frontend.rule: "Host:lidarr.{{ ansible_nas_domain }}"
       traefik.enable: "{{ lidarr_available_externally }}"
-      traefik.port: "8686"
+      traefik.http.services.lidarr-svc.loadbalancer.server.port: "8686"
+      traefik.http.routers.lidarr.rule: "Host(`lidarr.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.lidarr.tls: "true"
