--- a/tasks/netdata.yml
+++ b/tasks/netdata.yml
@@ -9,6 +9,9 @@
     name: netdata
     hostname: "{{ ansible_nas_hostname }}.{{ ansible_nas_domain }}"
     image: netdata/netdata
+    purge_networks: true
+    networks:
+      - name: web
     state: started
     pull: true
     ports:
@@ -26,7 +29,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "netdata"
-      traefik.frontend.rule: "Host:netdata.{{ ansible_nas_domain }}"
       traefik.enable: "{{ netdata_available_externally }}"
-      traefik.port: "19999"
+      traefik.http.services.netdata-svc.loadbalancer.server.port: "19999"
+      traefik.http.routers.netdata.rule: "Host(`netdata.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.netdata.tls: "true"
