--- a/tasks/nzbget.yml
+++ b/tasks/nzbget.yml
@@ -10,6 +10,9 @@
   docker_container:
     name: nzbget
     image: linuxserver/nzbget
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ nzbget_download_directory }}:/downloads:rw"
@@ -23,7 +26,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "nzbget"
-      traefik.frontend.rule: "Host:nzbget.{{ ansible_nas_domain }}"
       traefik.enable: "{{ nzbget_available_externally }}"
-      traefik.port: "6789"
+      traefik.http.services.nzbget-svc.loadbalancer.server.port: "6789"
+      traefik.http.routers.nzbget.rule: "Host(`nzbget.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.nzbget.tls: "true"
