--- a/tasks/ombi.yml
+++ b/tasks/ombi.yml
@@ -8,11 +8,16 @@
   docker_container:
     name: ombi
     image: linuxserver/ombi
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ ombi_config_directory }}:/config:rw"
     ports:
       - "3579:3579"
+    etc_hosts:
+      host.docker.internal: "172.17.0.1"
     env:
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ ombi_user_id }}"
@@ -20,7 +25,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "ombi"
-      traefik.frontend.rule: "Host:ombi.{{ ansible_nas_domain }}"
       traefik.enable: "{{ ombi_available_externally }}"
-      traefik.port: "3579"
+      traefik.http.services.ombi-svc.loadbalancer.server.port: "3579"
+      traefik.http.routers.ombi.rule: "Host(`ombi.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.ombi.tls: "true"
