--- a/tasks/sonarr.yml
+++ b/tasks/sonarr.yml
@@ -10,6 +10,9 @@
   docker_container:
     name: sonarr
     image: linuxserver/sonarr
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ sonarr_tv_directory }}:/tv:rw"
@@ -24,7 +27,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "sonarr"
-      traefik.frontend.rule: "Host:sonarr.{{ ansible_nas_domain }}"
       traefik.enable: "{{ sonarr_available_externally }}"
-      traefik.port: "8989"
+      traefik.http.services.sonarr-svc.loadbalancer.server.port: "8989"
+      traefik.http.routers.sonarr.rule: "Host(`sonarr.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.sonarr.tls: "true"
