--- a/tasks/znc.yml
+++ b/tasks/znc.yml
@@ -10,6 +10,9 @@
   docker_container:
     name: znc
     image: znc
+    purge_networks: true
+    networks:
+      - name: web
     pull: true
     volumes:
       - "{{ znc_data_directory }}:/znc-data:rw"
@@ -22,7 +25,7 @@
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "znc"
-      traefik.frontend.rule: "Host:znc.{{ ansible_nas_domain }}"
       traefik.enable: "{{ znc_available_externally }}"
-      traefik.port: "6677"
+      traefik.http.services.znc-svc.loadbalancer.server.port: "6677"
+      traefik.http.routers.znc.rule: "Host(`znc.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.znc.tls: "true"
